# liveo

dashboard/: package-lock.json  package.json
lib-ts/: .gitignore  package-lock.json  package.json  tsconfig.json
rust/: .gitignore  Cargo.toml
rust/backend/: Cargo.toml
rust/cli/: Cargo.toml
rust/core/: Cargo.toml  tracktable.MD
rust/core/src/: auth.rs  error.rs  lib.rs  server.rs  websocket.rs
rust/core/src/db/: mod.rs  queries.rs  tracktable.rs  utils.rs  workspace.rs
