[package]
name = "liveo_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "liveo_core"
path = "src/lib.rs"



[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
async-trait = "0.1"
thiserror = "2.0.12"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9.2"
uuid = { version = "1.17.0", features = ["serde"] }
tokio-postgres = {version="0.7.13", features=["with-chrono-0_4"]}
postgres-types = {version = "0.2.9", features= ["derive"]}
